feat: rebrand from Event Services to Tent Rental Services
- Update all marketing copy and user-facing text from 'Event Services' to 'Tent Rental Services'
- Change package name from 'cheshire-tent-events' to 'cheshire-tent-rentals'
- Update HTML title and meta descriptions for better SEO
- Revise feature descriptions to focus on tent rental services
- Update README with new branding and terminology
- Add rebranding entry to CHANGELOG
- Maintain database schema integrity (event_type, event_date remain as they refer to actual event data)
- Update landing page features and descriptions
- Revise hero section and CTA messaging

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cheshire-tent-events",
+  "name": "cheshire-tent-rentals",
   "private": true,
   "version": "0.0.0",
   "type": "module",
